// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteListScreen renders correctly when no notes are present 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#01579B",
        "borderRadius": 30,
        "bottom": 24,
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 24,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.4,
        "width": 60,
        "zIndex": 3,
      }
    }
    testID="createNoteIcon"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 24,
          },
          undefined,
          Object {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#455A64",
            "fontSize": 32,
          },
          undefined,
          Object {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Object {
          "color": "#455A64",
          "fontSize": 18,
          "marginVertical": 12,
        }
      }
    >
      You don't have any notes!
    </Text>
  </View>
</View>
`;

exports[`NoteListScreen renders correctly when notes are loaded 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#01579B",
        "borderRadius": 30,
        "bottom": 24,
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 24,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.4,
        "width": 60,
        "zIndex": 3,
      }
    }
    testID="createNoteIcon"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 24,
          },
          undefined,
          Object {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "body": "**this is test note**
\`this is new lne\`",
          "createdAt": 2022-01-21T05:49:45.613Z,
          "id": 100,
          "isArchived": false,
          "isFavourite": false,
          "title": "note title",
          "updatedAt": 2022-01-21T05:52:58.634Z,
        },
        Object {
          "body": "**this is test note 2**
\`this is new lne\`",
          "createdAt": 2022-01-21T05:49:45.613Z,
          "id": 101,
          "isArchived": false,
          "isFavourite": false,
          "title": "note title 2",
          "updatedAt": 2022-01-21T05:52:58.634Z,
        },
        Object {
          "body": "**this is test note 3**
\`this is new lne\`",
          "createdAt": 2022-01-21T05:49:45.613Z,
          "id": 102,
          "isArchived": false,
          "isFavourite": false,
          "title": "note title 3",
          "updatedAt": 2022-01-21T05:52:58.634Z,
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEnabled={true}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 12,
              "flex": 1,
              "flexDirection": "row",
              "margin": 12,
              "marginVertical": 8,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 6,
                "width": 0,
              },
              "shadowOpacity": 0.2,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#D6DBDF",
                "borderBottomLeftRadius": 12,
                "borderTopLeftRadius": 12,
                "flex": 4,
                "flexDirection": "row",
                "opacity": 1,
                "padding": 16,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 6,
                  "width": 0,
                },
                "shadowOpacity": 0.1,
              }
            }
            testID="detailNavigator"
          >
            <View
              style={
                Object {
                  "marginRight": 12,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#607D8B",
                      "fontSize": 24,
                    },
                    undefined,
                    Object {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <View>
              <Text
                style={
                  Object {
                    "color": "#222",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                note title
              </Text>
              <Text
                style={
                  Object {
                    "color": "#222",
                    "fontSize": 12,
                  }
                }
              >
                Fri Jan 21 2022 | 11:34:45 AM
              </Text>
            </View>
          </View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "opacity": 1,
              }
            }
            testID="createNoteNavigator"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#01579B",
                    "fontSize": 22,
                  },
                  undefined,
                  Object {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 12,
              "flex": 1,
              "flexDirection": "row",
              "margin": 12,
              "marginVertical": 8,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 6,
                "width": 0,
              },
              "shadowOpacity": 0.2,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#D6DBDF",
                "borderBottomLeftRadius": 12,
                "borderTopLeftRadius": 12,
                "flex": 4,
                "flexDirection": "row",
                "opacity": 1,
                "padding": 16,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 6,
                  "width": 0,
                },
                "shadowOpacity": 0.1,
              }
            }
            testID="detailNavigator"
          >
            <View
              style={
                Object {
                  "marginRight": 12,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#607D8B",
                      "fontSize": 24,
                    },
                    undefined,
                    Object {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <View>
              <Text
                style={
                  Object {
                    "color": "#222",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                note title 2
              </Text>
              <Text
                style={
                  Object {
                    "color": "#222",
                    "fontSize": 12,
                  }
                }
              >
                Fri Jan 21 2022 | 11:34:45 AM
              </Text>
            </View>
          </View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "opacity": 1,
              }
            }
            testID="createNoteNavigator"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#01579B",
                    "fontSize": 22,
                  },
                  undefined,
                  Object {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 12,
              "flex": 1,
              "flexDirection": "row",
              "margin": 12,
              "marginVertical": 8,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 6,
                "width": 0,
              },
              "shadowOpacity": 0.2,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#D6DBDF",
                "borderBottomLeftRadius": 12,
                "borderTopLeftRadius": 12,
                "flex": 4,
                "flexDirection": "row",
                "opacity": 1,
                "padding": 16,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 6,
                  "width": 0,
                },
                "shadowOpacity": 0.1,
              }
            }
            testID="detailNavigator"
          >
            <View
              style={
                Object {
                  "marginRight": 12,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#607D8B",
                      "fontSize": 24,
                    },
                    undefined,
                    Object {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <View>
              <Text
                style={
                  Object {
                    "color": "#222",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                note title 3
              </Text>
              <Text
                style={
                  Object {
                    "color": "#222",
                    "fontSize": 12,
                  }
                }
              >
                Fri Jan 21 2022 | 11:34:45 AM
              </Text>
            </View>
          </View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "opacity": 1,
              }
            }
            testID="createNoteNavigator"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#01579B",
                    "fontSize": 22,
                  },
                  undefined,
                  Object {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`NoteListScreen renders correctly when notes are loading 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#01579B",
        "borderRadius": 30,
        "bottom": 24,
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 24,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.4,
        "width": 60,
        "zIndex": 3,
      }
    }
    testID="createNoteIcon"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 24,
          },
          undefined,
          Object {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <ActivityIndicator
      color="#01579B"
      size="small"
    />
  </View>
</View>
`;
